[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cheetah_gh"
dynamic = ["version", "readme"]
authors = {name = "James Parrott", email = "james.parrott@proton.me"}
description = "Runs Grasshopper components from Python components, runs Rhino3D and Grasshopper from the command line, and stops Rhino from Python."
readme = {file = ["README.md"], content-type = "text/markdown"}
requires-python = ">=2.7"
keywords = ["Rhino", "Grasshopper", "control", "components", "runner", "tests"]
license = {file = "LICENSE.md"}
classifiers = [
    "Framework :: Grasshopper",
    "Programming Language :: Python",
]
dependencies = []

[project.scripts]
cheetah = "cheetah.gh_and_py_runner:main"

[tool.setuptools.dynamic]
version = {attr = "cheetah_GH.__version__"}

[tool.setuptools]
include_package_data = true




